editors/vscode-ysh/tree-sitter-ysh/grammar.js
  word: $ => $.identifier,

  // Inline rules for better performance
    source_file: $ => repeat($._statement),

    _statement: $ => choice(
      $._command,
      $._ysh_statement,
    ),

    // =========================================================================
    // Comments and Line Continuation
    // =========================================================================
    simple_command: $ => seq(
      repeat($.variable_assignment),
      optional($.command_name),
      repeat(choice(
        $.word,
        $._expression_word,
        $.redirect,
      )),
    ),

    command_name: $ => $.word,

    brace_group: $ => seq('{', repeat($._statement), '}'),

    if_statement: $ => seq(
      'if',
      $._condition,
      choice(
        // YSH style: if (expr) { }
        seq('{', repeat($._statement), '}'),
        // Shell style: if cmd; then ... fi
        seq('then', repeat($._statement)),
      ),
      repeat($.elif_clause),
      optional($.else_clause),
      optional('fi'),
    ),

    else_clause: $ => seq(
      'else',
      choice(
        seq('{', repeat($._statement), '}'),
        repeat($._statement),
      ),
    ),

    _condition: $ => choice(
      // YSH expression condition: (expr)
      $.parenthesized_expression,
      // Shell command condition
      seq(repeat1($._command), optional(';')),
    ),

    for_statement: $ => seq(
      'for',
      $.identifier,
      optional(seq('in', $._for_iterable)),
      optional(';'),
      choice(
        // YSH style
        seq('{', repeat($._statement), '}'),
        // Shell style
        seq('do', repeat($._statement), 'done'),
      ),
    ),

    _for_iterable: $ => choice(
      // YSH: for x in (mylist) { }
      $.parenthesized_expression,
      // Shell: for x in a b c; do ... done
      repeat1($.word),
    ),

    while_statement: $ => seq(
      choice('while', 'until'),
      $._condition,
      choice(
        seq('{', repeat($._statement), '}'),
        seq('do', repeat($._statement), 'done'),
      ),
    ),

    case_statement: $ => seq(
      'case',
      choice(
        // YSH: case (expr) { }
        seq($.parenthesized_expression, '{'),
        // Shell: case $x in
        seq($.word, 'in'),
      ),
      repeat($.case_arm),
      choice('}', 'esac'),
    ),

    case_arm: $ => seq(
      optional('('),
      $.pattern_list,
      choice(
        // YSH style
        seq('{', repeat($._statement), '}'),
        // Shell style
        seq(')', repeat($._statement), optional(choice(';;', ';&', ';;&'))),
      ),
    ),

    pattern_list: $ => seq(
      $.pattern,
      repeat(seq('|', $.pattern)),
    ),

    pattern: $ => choice(
      $.word,
      $.glob_pattern,
      '*',  // default case
    ),

    function_definition: $ => choice(
      // function keyword style
      seq(
        optional('function'),
        $.identifier,
        optional(seq('(', ')')),
        $.brace_group,
      ),
    ),

    // =========================================================================
    // YSH Statements
    // =========================================================================
    var_declaration: $ => seq(
      'var',
      $.identifier,
      optional($.type_annotation),
      optional(seq('=', $._expression)),
    ),

    const_declaration: $ => seq(
      'const',
      $.identifier,
      optional($.type_annotation),
      '=',
      $._expression,
    ),

    setvar_statement: $ => seq(
      'setvar',
      $._lvalue,
      $._assignment_op,
      $._expression,
    ),

    setglobal_statement: $ => seq(
      'setglobal',
      $._lvalue,
      $._assignment_op,
      $._expression,
    ),

    _lvalue: $ => choice(
      $.identifier,
      $.subscript_expression,
      $.attribute_expression,
    ),

    _assignment_op: $ => choice(
      '=', '+=', '-=', '*=', '/=', '//=', '%=', '**=',
      '<<=', '>>=', '&=', '|=', '^=',
    ),

    type_annotation: $ => seq(':', $.type_expression),

    type_expression: $ => seq(
      $.identifier,
      optional(seq('[', commaSep1($.type_expression), ']')),
    ),

    proc_definition: $ => seq(
      'proc',
      $.identifier,
      optional($.proc_signature),
      $.brace_group,
    ),

    proc_signature: $ => choice(
      // Open proc: proc p { }
      seq('(', ')'),
      // Closed proc with params: proc p (x, y; z) { }
      seq('(', optional($.param_list), ')'),
    ),

    func_definition: $ => seq(
      'func',
      $.identifier,
      '(',
      optional($.param_list),
      ')',
      optional(seq(':', $.type_expression)),
      $.brace_group,
    ),

    param_list: $ => seq(
      commaSep1($.param),
      optional(seq(';', commaSep1($.named_param))),
    ),

    param: $ => seq(
      $.identifier,
      optional($.type_annotation),
      optional(seq('=', $._expression)),
    ),

    named_param: $ => seq(
      $.identifier,
      optional($.type_annotation),
      optional(seq('=', $._expression)),
    ),

    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.comparison_expression,
      $.range_expression,
    ),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    binary_expression: $ => choice(
      // Arithmetic
      prec.left(PREC.ADD, seq($._expression, choice('+', '-'), $._expression)),
      prec.left(PREC.MUL, seq($._expression, choice('*', '/', '//', '%'), $._expression)),
      prec.right(PREC.POWER, seq($._expression, '**', $._expression)),
      // String concatenation
      prec.left(PREC.ADD, seq($._expression, '++', $._expression)),
      // Bitwise
      prec.left(PREC.BITOR, seq($._expression, '|', $._expression)),
      prec.left(PREC.BITXOR, seq($._expression, '^', $._expression)),
      prec.left(PREC.BITAND, seq($._expression, '&', $._expression)),
      prec.left(PREC.SHIFT, seq($._expression, choice('<<', '>>'), $._expression)),
      // Logical
      prec.left(PREC.AND, seq($._expression, choice('and', '&&'), $._expression)),
      prec.left(PREC.OR, seq($._expression, choice('or', '||'), $._expression)),
    ),

    comparison_expression: $ => prec.left(PREC.COMPARE, seq(
      $._expression,
      repeat1(seq(
        choice(
          '===', '!==', '~==',
          '<', '>', '<=', '>=',
          'in', 'is',
          seq('not', 'in'),
          seq('is', 'not'),
          '~', '!~', '~~', '!~~',
        ),
        $._expression,
      )),
    )),

    boolean_literal: $ => choice('true', 'false'),

    number: $ => choice(
      $.integer,
      $.float,
    ),

    integer: $ => choice(
      // Decimal: 42, 1_000_000
      /[0-9](_?[0-9])*/,
      // Binary: 0b1010
      /0[bB](_?[01])+/,
      // Octal: 0o755
      /0[oO](_?[0-7])+/,
      // Hex: 0xff
      /0[xX](_?[0-9a-fA-F])+/,
    ),

    float: $ => /[0-9](_?[0-9])*(\.[0-9](_?[0-9])*)?([eE][+-]?[0-9]+)?/,

    string: $ => choice(
      $.single_quoted_string,
      $.double_quoted_string,
      $.dollar_single_quoted_string,
      $.raw_string,
      $.multiline_single_string,
      $.multiline_double_string,
      $.j_string,
    ),

    single_quoted_string: $ => seq(
      "'",
      repeat(choice(
        /[^'\\]+/,
        $.escape_sequence,
      )),
      "'",
    ),

    double_quoted_string: $ => seq(
      '"',
      repeat(choice(
        /[^"\\$`]+/,
        $.escape_sequence,
        $.variable_substitution,
        $.command_substitution,
        $.expression_substitution,
      )),
      '"',
    ),

    dollar_single_quoted_string: $ => seq(
      "$'",
      repeat(choice(
        /[^'\\]+/,
        $.escape_sequence,
      )),
      "'",
    ),

    raw_string: $ => seq(
      "r'",
      /[^']*/,
      "'",
    ),

    multiline_single_string: $ => seq(
      choice("'''", "u'''", "b'''", "r'''"),
      repeat(choice(
        /[^']+/,
        seq("'", /[^']/),
        seq("''", /[^']/),
      )),
      "'''",
    ),

    multiline_double_string: $ => seq(
      choice('"""', '$"""'),
      repeat(choice(
        /[^"\\$`]+/,
        seq('"', /[^"]/),
        seq('""', /[^"]/),
        $.escape_sequence,
        $.variable_substitution,
        $.command_substitution,
        $.expression_substitution,
      )),
      '"""',
    ),

    j_string: $ => seq(
      'j"',
      repeat(choice(
        /[^"\\]+/,
        $.escape_sequence,
      )),
      '"',
    ),

    escape_sequence: $ => token(choice(
      // Single character escapes
      /\\[\\'"abefnrtv0]/,
      // Hex escapes: \xff
      /\\x[0-9a-fA-F]{1,2}/,
      // Unicode escapes: \u{1234}
      /\\u\{[0-9a-fA-F]{1,6}\}/,
      // Legacy unicode: \u1234
      /\\u[0-9a-fA-F]{4}/,
      // Octal: \377
      /\\[0-7]{1,3}/,
    )),

    // =========================================================================
    // Substitutions
    // =========================================================================
    variable_substitution: $ => choice(
      // Simple: $var, $1, $?, $@, etc.
      $.simple_variable,
      // Braced: ${var}, ${var:-default}, etc.
      $.braced_variable,
    ),

    simple_variable: $ => token(seq(
      '$',
      choice(
        /[a-zA-Z_][a-zA-Z0-9_]*/,  // $name
        /[0-9]/,                    // $1
        /[!@#$*?\-]/,              // special vars
      ),
    )),

    word: $ => choice(
      $.bare_word,
      $.string,
      $.variable_substitution,
      $.command_substitution,
      $.expression_substitution,
      $.brace_expansion,
      $.tilde_expansion,
    ),

    _expression_word: $ => choice(
      $.string,
      $.variable_substitution,
      $.command_substitution,
      $.expression_substitution,
    ),

    bare_word: $ => /[a-zA-Z0-9_\-\.\/]+/,

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
