editors/vscode-ysh/tree-sitter-ysh/test/corpus/declarations.txt
================================================================================
Variable declaration
================================================================================

var x = 42

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    (identifier)
    (number (integer))))

================================================================================
Constant declaration
================================================================================

const PI = 3.14159

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (identifier)
    (number (float))))

================================================================================
Variable with type annotation
================================================================================

var name: Str = "hello"

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    (identifier)
    (type_annotation
      (type_expression (identifier)))
    (string (double_quoted_string))))

================================================================================
Setvar statement
================================================================================

setvar x = 10

--------------------------------------------------------------------------------

(source_file
  (setvar_statement
    (identifier)
    (number (integer))))

================================================================================
Setglobal statement
================================================================================

setglobal PATH = "/usr/bin"

--------------------------------------------------------------------------------

(source_file
  (setglobal_statement
    (identifier)
    (string (double_quoted_string))))
