editors/vscode-ysh/tree-sitter-ysh/test/corpus/strings.txt
================================================================================
Single quoted string
================================================================================

echo 'hello world'

--------------------------------------------------------------------------------

(source_file
  (simple_command
    (command_name (word (bare_word)))
    (word (string (single_quoted_string)))))

================================================================================
Double quoted string with variable
================================================================================

echo "Hello, $name!"

--------------------------------------------------------------------------------

(source_file
  (simple_command
    (command_name (word (bare_word)))
    (word (string (double_quoted_string
      (variable_substitution (simple_variable)))))))

================================================================================
Dollar single quoted string with escapes
================================================================================

echo $'line1\nline2'

--------------------------------------------------------------------------------

(source_file
  (simple_command
    (command_name (word (bare_word)))
    (word (string (dollar_single_quoted_string
      (escape_sequence))))))

================================================================================
Raw string
================================================================================

var pattern = r'foo\d+'

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    (identifier)
    (string (raw_string))))

================================================================================
Multiline single string
================================================================================

var text = '''
line1
line2
'''

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    (identifier)
    (string (multiline_single_string))))

================================================================================
Multiline double string with substitution
================================================================================

var msg = """
Hello $name,
Welcome to $place!
"""

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    (identifier)
    (string (multiline_double_string
      (variable_substitution (simple_variable))
      (variable_substitution (simple_variable))))))

================================================================================
J8 string
================================================================================

var data = j"key: value"

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    (identifier)
    (string (j_string))))

